packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/valid/merge-multiple-files/upgrade-event-type-attachments/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading of attachments of an event type works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:cs"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="description" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <!-- No changes, only a version increment. -->
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="description" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="3">
        <properties>
          <property name="a" object-type="a" description="description" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations/>
        <attachments>
          <attachment name="a" description="a" display-name-singular="a" display-name-plural="a" media-type="text/plain" encoding="unicode"/>
        </attachments>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="4">
        <properties>
          <property name="a" object-type="a" description="description" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations/>
        <attachments>
          <!-- Changed description -->
          <attachment name="a" description="description" display-name-singular="a" display-name-plural="a" media-type="text/plain" encoding="unicode"/>
        </attachments>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="5">
        <properties>
          <property name="a" object-type="a" description="description" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations/>
        <attachments>
          <!-- Changed singular display name -->
          <attachment name="a" description="description" display-name-singular="changed-display-name-singular" display-name-plural="a" media-type="text/plain" encoding="unicode"/>
        </attachments>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="6">
        <properties>
          <property name="a" object-type="a" description="description" unique="true" optional="true" multivalued="true" merge="match"/>
        </properties>
        <relations/>
        <attachments>
          <!-- Changed plural display name -->
          <attachment name="a" description="description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" media-type="text/plain" encoding="unicode"/>
        </attachments>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
