packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/upgrade-event-type-remove-property-relation.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if removing a property relation is refused.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="datetime"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations>
          <other property1="a" property2="b" directed="false" description="[[a]] linked to [[b]]" confidence="2" predicate="linked"/>
        </relations>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
          <property name="b" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
